fixed overflow-x

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@
 
 body {
   background-color: #F0F8FF;
+  overflow-x: hidden;
 }
 
 .background {
